# angular_bazel_architect_ii

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  angular.json  package.json  tsconfig.json
architect-test/: BUILD.bazel
architect-test/src/app/: app.component.html  app.module.ts
frontend-lib/: BUILD.bazel  ng-package.js  tsconfig.lib.json
frontend-lib/src/lib/: frontend-lib.component.html  frontend-lib.component.scss  frontend-lib.component.spec.ts  frontend-lib.component.ts
multi-video-microsite/: .eslintrc.json  BUILD.bazel  karma.conf.js  proxy.conf.json  tsconfig.json  tsconfig.spec.json  tslint.json
multi-video-microsite/e2e/src/: app.e2e-spec.ts
multi-video-microsite/local-freewall/: server.ts
multi-video-microsite/src/: index.html  polyfills.ts  styles.scss
multi-video-microsite/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  link.pipe.ts  link.renderer.service.ts  (+1 more)
src/: index.html  styles.scss
src/app/: app.component.html  app.module.ts
src/environments/: test.freewall.config.ts
video-player/: BUILD.bazel  README.md  ng-package.js  package.json  rxjs_shims.js  tslint.json
video-player/src/: index.ts
video-player/src/ima/: ads.manager.ts  ads.rendering.settings.ts  google.ima.service.spec.ts  google.ima.service.ts  ima.component.html  ima.component.scss  ima.component.spec.ts  ima.component.ts  ima.module.ts  playback.state.ts
video-player/src/player/: player.component.html  player.component.scss  player.component.spec.ts  player.component.ts  player.module.ts
(+61 files in other folders)
